--- a/services.html
+++ b/services.html
@@ -445,7 +445,7 @@ var Titik_Sampel = L.geoJson(Titik_Sampel, {
             opacity: 1,
             column: 1,
             legends: [{
-                label: "Batas Kecamatan",
+                label: "Batas Desa",
                 font: 15,
                 type: "polyline",
                 color: "#000000",
