--- a/services.html
+++ b/services.html
@@ -89,9 +89,9 @@
           <li class="dropdown"><a href="#"><span>Download Data</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="https://drive.google.com/file/d/1BRzkt7wj-0vcdUCCtkDUdY91gDDWkdST/view?usp=sharing">Shapefile Tingkat Bahaya</a></li>
-              <li><a href="https://drive.google.com/file/d/1XneibmCFcEFEk1lcTXKorr9V-KxsCNjl/view?usp=sharing">Shapefile Tingkat Kerentanan</a></li>
-              <li><a href="https://drive.google.com/file/d/12IuxzsnEUFurTXWgwaxRA7dyVgH9TQ7i/view?usp=sharing">Shapefile Tingkat Kapasitas</a></li>
-              <li><a href="https://drive.google.com/file/d/1GNpilSNDJcqz3AktcTyK7AdqP7Wh_I3K/view?usp=sharing">Shapefile Tingkat Risiko</a></li>
+              <li><a href="https://drive.google.com/file/d/176FhBOQuM7ydcb2xL3KJlhUGIPJf287f/view?usp=sharing">Shapefile Tingkat Kerentanan</a></li>
+              <li><a href="https://drive.google.com/file/d/1gJ3fGXFdpHCIRAaSErn4zynd_HHdgDEd/view?usp=sharing">Shapefile Tingkat Kapasitas</a></li>
+              <li><a href="https://drive.google.com/file/d/1UGI4AZNjG1mjwgty4lbMrcCSwiiD-Agy/view?usp=sharing">Shapefile Tingkat Risiko</a></li>
             </ul>
           </li>
           <li><a href="contact.html">Contact</a></li>
@@ -424,7 +424,7 @@ var Titik_Sampel = L.geoJson(Titik_Sampel, {
                 }
             });
     var overlayMaps = {
-      "Batas Kecamatan" : Kecamatan,
+      "Batas Desa" : Kecamatan,
       "Tingkat Bahaya Tsunami" : Tingkat_Bahaya_Tsunami,
       "Tingkat Kerentanan Tsunami" : Tingkat_Kerentanan,
       "Tingkat Kapasitas Tsunami" : Tingkat_Kapasitas,
